Fix: Reorganize site structure and consolidate index files for GitHub Pages

--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,6 @@
+source: docs
+baseurl: "/documentation-projects"
+url: "https://raytogether.github.io"
 theme: jekyll-theme-cayman
 title: Documentation Projects
 description: Centralized repository for documentation templates, frameworks, and project documentation
