--- a/_config.yml
+++ b/_config.yml
@@ -6,11 +6,11 @@ url: "https://raytogether.github.io"
 
 # Build settings
 markdown: kramdown
-theme: minima
+remote_theme: pages-themes/cayman
 plugins:
+  - jekyll-remote-theme
   - jekyll-feed
   - jekyll-seo-tag
-
 # Collection settings
 collections:
   ssh:
